--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
     "excel4node": "^1.7.2",
     "exceljs": "^4.2.1",
     "express": "^4.17.1",
     "file-type": "^16.3.0",
     "mime-db": "^1.46.0",
     "moment": "^2.29.1",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "ora": "^5.4.0",
     "qr-image": "^3.2.0",
