Implementacion de sendgrid

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-MAIL_PORT=2525
-MAIL_SMTP=smtp.mailtrap.io
-MAIL_USER=c1916744662924
-MAIL_PASS=167e3da83a95f2
-MAIL_CLIENT=leifer33@gmail.com
-MAIL_FROM=hola@hola.com
+MAIL_PORT=465
+MAIL_SMTP=smtp.sendgrid.net
+MAIL_USER=apikey
+MAIL_PASS=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
+MAIL_CLIENT=juandatm07@hotmail.com
+MAIL_FROM=Juandatm07@hotmail.com
 MAIL_SUBJECT=Cliente interesado
+MAIL_TRANSPORT=smtp
