--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ MAIL_PASS=ss
 MAIL_CLIENT=le3ifer3@gmail.com
 MAIL_FROM=hola@hola.com
 MAIL_SUBJECT=Cliente interesado
+MAIL_TRANSPORT=sendgrid
+SENDGRID_API_KEY=
