--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MAIL_PORT=465
 MAIL_SMTP=smtp.sendgrid.net
 MAIL_USER=apikey
 MAIL_PASS=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
-MAIL_CLIENT=juandatm07@hotmail.com
-MAIL_FROM=Juandatm07@hotmail.com
+MAIL_CLIENT=juandatm07@gmail.com
+MAIL_FROM=juandatm07@hotmail.com
 MAIL_SUBJECT=Cliente interesado
 MAIL_TRANSPORT=smtp
