Change to SMTP Gmail

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MAIL_PORT=465
-MAIL_SMTP=smtp.sendgrid.net
-MAIL_USER=apikey
-MAIL_PASS=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
+MAIL_SMTP=smtp.gmail.com
+MAIL_USER=leifer33@gmail.com
+MAIL_PASS=bxuxdjjyedpsyfsm
 MAIL_CLIENT=juandatm07@gmail.com
-MAIL_FROM=juandatm07@hotmail.com
+MAIL_FROM=leifer33@gmail.com
 MAIL_SUBJECT=Cliente interesado
 MAIL_TRANSPORT=smtp
