--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MAIL_PORT=465
 MAIL_SMTP=smtp.gmail.com
-MAIL_USER=tumail@gmail.com
-MAIL_PASS=TU_CONTRASEÑA_GENERADA
+MAIL_USER=juandatm07@gmail.com
+MAIL_PASS=CONTRASEÑA_GENERADA
 MAIL_CLIENT=juandatm07@gmail.com
-MAIL_FROM=tumail@gmail.com
+MAIL_FROM=juandatm07@gmail.com
 MAIL_SUBJECT=Cliente interesado
 MAIL_TRANSPORT=smtp
