--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ MAIL_CLIENT=juandatm07@gmail.com
 MAIL_FROM=juandatm07@gmail.com
 MAIL_SUBJECT=Cliente interesado
 MAIL_TRANSPORT=smtp
+EXTERNAL_API=http://f54b42d.online-server.cloud:5192/CreditosTorresAp/api/Products/ByCategoryId
