--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ MAIL_CLIENT=le3ifer3@gmail.com
 MAIL_FROM=hola@hola.com
 MAIL_SUBJECT=Cliente interesado
 MAIL_TRANSPORT=sendgrid
-SENDGRID_API_KEY=
+EXTERNAL_API=
