--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "test-ws-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^7.4.2",
-    "axios": "^0.21.1",
-    "chalk": "^4.1.0",
-    "dotenv": "^8.2.0",
-    "excel4node": "^1.7.2",
-    "exceljs": "^4.2.1",
-    "express": "^4.17.1",
-    "file-type": "^16.3.0",
-    "mime-db": "^1.46.0",
-    "moment": "^2.29.1",
-    "nodemailer": "^6.5.0",
-    "nodemon": "^2.0.7",
-    "ora": "^5.4.0",
-    "qr-image": "^3.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.12.5",
-    "xlsx": "^0.16.9"
-  }
+    "name": "test-ws-bot",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./src/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@sendgrid/mail": "^7.6.0",
+        "axios": "^0.21.4",
+        "chalk": "^4.1.2",
+        "dotenv": "^8.6.0",
+        "excel4node": "^1.7.2",
+        "exceljs": "^4.3.0",
+        "express": "^4.17.1",
+        "file-type": "^16.5.3",
+        "mime-db": "^1.51.0",
+        "moment": "^2.29.1",
+        "nodemailer": "^6.7.2",
+        "nodemon": "^2.0.15",
+        "ora": "^5.4.1",
+        "qr-image": "^3.2.0",
+        "qrcode-terminal": "^0.12.0",
+        "whatsapp-web.js": "^1.15.2",
+        "xlsx": "^0.16.9"
+    }
 }
